hphp/test/zend/good/ext/bcmath/tests/bcdiv_error2.php.skipif
<?php if(!extension_loaded("bcmath")) print "skip"; ?>