hphp/test/zend/bad/ext/standard/tests/general_functions/getrusage.php.skipif
<?php if (!function_exists("getrusage")) print "skip"; ?>